--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
 DMSSN: Distilled Mixed Spectral-Spatial Network for Hyperspectral Salient Object Detection
+Dataset: https://pan.baidu.com/s/1AsdnO2-nadxTaq9_9Mo3Eg?pwd=tftf 
